--- a/.github/workflows/apktest.yml
+++ b/.github/workflows/apktest.yml
@@ -15,7 +15,7 @@ jobs:
         uses: ArtemSBulgakov/buildozer-action@v1
         id: buildozer
         with:
-          workdir: Android-Bluetooth-KISS-TCP-Server
+          workdir: .
           buildozer_version: stable
 
       - name: Upload artifacts
