--- a/.github/workflows/apktest.yml
+++ b/.github/workflows/apktest.yml
@@ -11,6 +11,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y git zip unzip openjdk-11-jdk
+          pip install --upgrade Cython
+
+      - name: Install Buildozer and Dependencies
+        run: |
+          pip install buildozer
+          pip install pyjnius
+
       - name: Build with Buildozer
         uses: ArtemSBulgakov/buildozer-action@v1
         id: buildozer
