--- a/.github/workflows/apktest.yml
+++ b/.github/workflows/apktest.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y git zip unzip openjdk-11-jdk python3.10 python3.10-dev python3.10-venv
+          sudo apt-get install -y git zip unzip openjdk-11-jdk python3.10
           pip install --upgrade Cython
 
       - name: Install Buildozer and Dependencies
